Add Dockerfile and .dockerignore for Dockerization